--- a/weather-data-viewer/src/index.html
+++ b/weather-data-viewer/src/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>WeatherDataViewer</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div id="wrapper">
+    <app-root></app-root>
+  </div>
+  <div id="link-wrapper">
+    <a href="./assets/3rdpartylicenses.txt" id="centered-link">
+      3rd party licenses that apply to the contents of this page
+    </a>
+  </div>
 </body>
 </html>
